Fix title and update font link in index.html

--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
-    <title>cratedigger.js</title>
+    <title>Cratedigger</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
     <link rel="stylesheet" href="cratedigger.css" />
     <link rel="stylesheet" href="main.css" />
-
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 </head>
-
 <body>
     <div id="cratedigger">
         <div id="cratedigger-canvas"></div>
@@ -49,8 +44,6 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="bower_components/threejs/build/three.min.js"></script>
     <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
-    
     <script src="main.js"></script>
 </body>
-
 </html>
