--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="bower_components/threejs/build/three.min.js"></script>
     <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
-    <script type="module" src="main.js"></script>
+    <script src="cratedigger.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
