--- a/index.html
+++ b/index.html
@@ -1,56 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <title>cratedigger.js</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta charset="utf-8">
+  <title>cratedigger.js</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" href="cratedigger.css" />
-    <link rel="stylesheet" href="main.css" />
+  <!-- Styles -->
+  <link rel="stylesheet" href="cratedigger.css" />
+  <link rel="stylesheet" href="main.css" />
 
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-
+  <!-- Use HTTPS to avoid mixed-content blocking -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <div id="cratedigger">
-        <div id="cratedigger-canvas"></div>
-        <div id="cratedigger-loading">
-            <div class="info-container">
-                <div class="vertical-center">
-                    <span class="loading-label">Loading records...</span>
-                </div>
-            </div>
+  <div id="cratedigger">
+    <div id="cratedigger-canvas"></div>
+
+    <div id="cratedigger-loading">
+      <div class="info-container">
+        <div class="vertical-center">
+          <span class="loading-label">Loading records...</span>
         </div>
-        <div id="cratedigger-info">
-            <div class="info-container">
-                <div class="vertical-center">
-                    <div id="cratedigger-record-artist"></div>
-                    <div id="cratedigger-record-title"></div>
-                    <div id="cratedigger-record-cover"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="bottom-bar" class="noselect">
-        <div id="button-prev" class="bottom-bar-item">
-            PREVIOUS
-        </div>
-        <div id="button-show" class="bottom-bar-item">
-            SHOW
-        </div>
-        <div id="button-next" class="bottom-bar-item">
-            NEXT
-        </div>
+      </div>
     </div>
 
-    <!-- Javascript -->
-    <script src="bower_components/modernizr/modernizr.js"></script>
-    <script src="bower_components/threejs/build/three.min.js"></script>
-    <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
-    
-    <script src="main.js"></script>
+    <div id="cratedigger-info">
+      <div class="info-container">
+        <div class="vertical-center">
+          <div id="cratedigger-record-artist"></div>
+          <div id="cratedigger-record-title"></div>
+          <div id="cratedigger-record-cover"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="bottom-bar" class="noselect">
+    <div id="button-prev" class="bottom-bar-item">PREVIOUS</div>
+    <div id="button-show" class="bottom-bar-item">SHOW</div>
+    <div id="button-next" class="bottom-bar-item">NEXT</div>
+  </div>
+
+  <!-- JavaScript dependencies your project already uses -->
+  <script src="bower_components/modernizr/modernizr.js"></script>
+  <script src="bower_components/threejs/build/three.min.js"></script>
+  <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
+
+  <!-- Your app entry: built/bundled version of main.js will be loaded here -->
+  <script src="main.js"></script>
 </body>
-
 </html>
