--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="cratedigger.css" />
   <link rel="stylesheet" href="main.css" />
-  <!-- HTTPS avoids mixed-content blocking on GitHub Pages -->
+  <!-- Use HTTPS to avoid mixed-content errors on GitHub Pages -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -36,12 +36,12 @@
     <div id="button-next" class="bottom-bar-item">NEXT</div>
   </div>
 
-  <!-- Existing vendor scripts (keep as-is if you use them elsewhere) -->
+  <!-- Existing vendor scripts -->
   <script src="bower_components/modernizr/modernizr.js"></script>
   <script src="bower_components/threejs/build/three.min.js"></script>
   <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
 
-  <!-- IMPORTANT: Treat main.js as an ES module on GitHub Pages -->
+  <!-- Load main.js as an ES module -->
   <script type="module" src="main.js"></script>
 </body>
 </html>
