--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="cratedigger.css" />
   <link rel="stylesheet" href="main.css" />
-  <!-- Use HTTPS to avoid mixed-content errors on GitHub Pages -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <!-- Link the custom favicon instead of relying on the default favicon.ico request -->
+  <link rel="icon" href="favicon_Version7.ico" type="image/x-icon" />
+  <!-- Use HTTPS to avoid mixed‑content errors on GitHub Pages -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div id="cratedigger">
@@ -41,7 +43,10 @@
   <script src="bower_components/threejs/build/three.min.js"></script>
   <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
 
-  <!-- Load main.js as an ES module -->
-  <script type="module" src="main.js"></script>
+  <!-- Load the cratedigger library as a classic script; it attaches itself to window.cratedigger -->
+  <script src="cratedigger.js"></script>
+
+  <!-- Load the application logic as a classic script -->
+  <script src="main.js"></script>
 </body>
 </html>
