--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
   <script src="bower_components/threejs/build/three.min.js"></script>
   <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
 
-  <!-- Load the cratedigger library as a classic script; it attaches itself to window.cratedigger -->
+  <!-- Load the cratedigger library as a classic script -->
   <script src="cratedigger.js"></script>
 
-  <!-- Load the application logic as a classic script -->
+  <!-- Load the application logic -->
   <script src="main.js"></script>
 </body>
 </html>
