Reorder script tags for correct loading sequence

--- a/index.html
+++ b/index.html
@@ -76,4 +76,6 @@
   })();
 </script>
 
+<!-- index.html — bottom of <body>; ensure this exact order -->
+<script src="cratedigger.js"></script>
 <script src="main.js"></script>
