--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- /index.html — paste this entire file, exactly -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,15 +7,39 @@
   <link rel="stylesheet" href="cratedigger.css" />
   <link rel="stylesheet" href="main.css" />
   <link rel="icon" href="favicon_Version7.ico" type="image/x-icon" />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
+  <!-- Note: Removed Google Fonts link to avoid external CDN -->
   <style>
-    html,body{margin:0;padding:0;height:100%;background:#0c0c0c;color:#eaeaea;font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
-    #cratedigger{position:relative;width:100%;height:100%;overflow:hidden}
-    #cratedigger-canvas{position:absolute;inset:0}
-    #cratedigger-loading{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:#bbb}
-    #cratedigger-info{position:absolute;right:16px;top:16px;width:280px;max-width:calc(100% - 32px);background:rgba(15,15,15,.85);border:1px solid rgba(255,255,255,.08);border-radius:12px;padding:14px}
-    #bottom-bar{position:absolute;left:0;right:0;bottom:0;padding:14px 12px 16px;display:flex;gap:12px;justify-content:center;background:linear-gradient(180deg,rgba(12,12,12,0) 0%,rgba(12,12,12,.85) 30%,rgba(12,12,12,.95) 100%)}
-    #bottom-bar .bottom-bar-item{border:1px solid rgba(255,255,255,.15);background:#1a1a1a;color:#f2f2f2;padding:10px 14px;border-radius:10px;cursor:pointer}
+    html, body {
+      margin: 0; padding: 0; height: 100%;
+      background: #0c0c0c; color: #eaeaea;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+    }
+    #cratedigger { position: relative; width: 100%; height: 100%; overflow: hidden; }
+    #cratedigger-canvas { position: absolute; inset: 0; }
+    #cratedigger-loading {
+      position: absolute; inset: 0;
+      display: flex; align-items: center; justify-content: center;
+      color: #bbb;
+    }
+    #cratedigger-info {
+      position: absolute; right: 16px; top: 16px;
+      width: 280px; max-width: calc(100% - 32px);
+      background: rgba(15,15,15,0.85);
+      border: 1px solid rgba(255,255,255,0.08);
+      border-radius: 12px; padding: 14px;
+    }
+    #bottom-bar {
+      position: absolute; left: 0; right: 0; bottom: 0;
+      padding: 14px 12px 16px;
+      display: flex; gap: 12px; justify-content: center;
+      background: linear-gradient(180deg, rgba(12,12,12,0) 0%, rgba(12,12,12,0.85) 30%, rgba(12,12,12,0.95) 100%);
+    }
+    #bottom-bar .bottom-bar-item {
+      border: 1px solid rgba(255,255,255,0.15);
+      background: #1a1a1a; color: #f2f2f2;
+      padding: 10px 14px; border-radius: 10px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -26,8 +49,8 @@
 
     <aside id="cratedigger-info" aria-live="polite">
       <div id="cratedigger-record-artist"></div>
-      <div id="cratedigger-record-title" style="font-weight:700;margin:4px 0 10px 0;"></div>
-      <div id="cratedigger-record-cover" style="width:100%;padding-top:100%;background-size:cover;background-position:center;border-radius:8px;border:1px solid rgba(255,255,255,.06)"></div>
+      <div id="cratedigger-record-title" style="font-weight:700; margin:4px 0 10px 0;"></div>
+      <div id="cratedigger-record-cover" style="width:100%; padding-top:100%; background-size:cover; background-position:center; border-radius:8px; border:1px solid rgba(255,255,255,0.06);"></div>
     </aside>
   </div>
 
@@ -37,12 +60,12 @@
     <div id="button-next" class="bottom-bar-item">NEXT</div>
   </div>
 
-  <!-- Vendor libs from your repo (no CDNs, no path changes) -->
+  <!-- Vendor libs from the repo (no external CDNs) -->
   <script src="./vendor/modernizr.custom.js"></script>
   <script src="./vendor/three.min.js"></script>
   <script src="./vendor/dat.gui.min.js"></script>
 
-  <!-- Your runtime and CSV-driven boot -->
+  <!-- CrateDigger runtime and CSV-driven boot script -->
   <script src="./cratedigger.js"></script>
   <script src="./main.js"></script>
 </body>
