--- a/index.html
+++ b/index.html
@@ -1,72 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <title>WRXCRATE · CrateDigger</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="cratedigger.css" />
-  <link rel="stylesheet" href="main.css" />
-  <link rel="icon" href="favicon_Version7.ico" type="image/x-icon" />
-  <!-- Note: Removed Google Fonts link to avoid external CDN -->
-  <style>
-    html, body {
-      margin: 0; padding: 0; height: 100%;
-      background: #0c0c0c; color: #eaeaea;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-    }
-    #cratedigger { position: relative; width: 100%; height: 100%; overflow: hidden; }
-    #cratedigger-canvas { position: absolute; inset: 0; }
-    #cratedigger-loading {
-      position: absolute; inset: 0;
-      display: flex; align-items: center; justify-content: center;
-      color: #bbb;
-    }
-    #cratedigger-info {
-      position: absolute; right: 16px; top: 16px;
-      width: 280px; max-width: calc(100% - 32px);
-      background: rgba(15,15,15,0.85);
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 12px; padding: 14px;
-    }
-    #bottom-bar {
-      position: absolute; left: 0; right: 0; bottom: 0;
-      padding: 14px 12px 16px;
-      display: flex; gap: 12px; justify-content: center;
-      background: linear-gradient(180deg, rgba(12,12,12,0) 0%, rgba(12,12,12,0.85) 30%, rgba(12,12,12,0.95) 100%);
-    }
-    #bottom-bar .bottom-bar-item {
-      border: 1px solid rgba(255,255,255,0.15);
-      background: #1a1a1a; color: #f2f2f2;
-      padding: 10px 14px; border-radius: 10px;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-  <div id="cratedigger">
-    <div id="cratedigger-canvas" aria-label="3D record crate canvas"></div>
-    <div id="cratedigger-loading">Loading crate…</div>
+<script src="cratedigger.js"></script>
 
-    <aside id="cratedigger-info" aria-live="polite">
-      <div id="cratedigger-record-artist"></div>
-      <div id="cratedigger-record-title" style="font-weight:700; margin:4px 0 10px 0;"></div>
-      <div id="cratedigger-record-cover" style="width:100%; padding-top:100%; background-size:cover; background-position:center; border-radius:8px; border:1px solid rgba(255,255,255,0.06);"></div>
-    </aside>
-  </div>
+<!-- Make constants.js usable from classic scripts -->
+<script>
+  // Lightweight ES module loader shim for a single default export
+  (function attachConstants(){
+    var s = document.createElement('script');
+    s.type = 'module';
+    s.text = `
+      import cfg from './constants.js';
+      window.CRATE_CFG = cfg;
+    `;
+    document.currentScript.after(s);
+  })();
+</script>
 
-  <div id="bottom-bar" class="noselect">
-    <div id="button-prev" class="bottom-bar-item">PREVIOUS</div>
-    <div id="button-show" class="bottom-bar-item">SHOW</div>
-    <div id="button-next" class="bottom-bar-item">NEXT</div>
-  </div>
+<script>
+  // Wait until constants are attached, then boot your app
+  (function bootWhenReady(){
+    function ready(){ return window.CRATE_CFG && window.cratedigger; }
+    function tick(){
+      if(ready()){
+        // If your main.js exposes a global boot, call it here; otherwise
+        // main.js will read window.CRATE_CFG directly.
+        if (window.bootCrateDigger) window.bootCrateDigger(window.CRATE_CFG);
+        return;
+      }
+      setTimeout(tick, 0);
+    }
+    tick();
+  })();
+</script>
 
-  <!-- Vendor libs from the repo (no external CDNs) -->
-  <script src="./vendor/modernizr.custom.js"></script>
-  <script src="./vendor/three.min.js"></script>
-  <script src="./vendor/dat.gui.min.js"></script>
-
-  <!-- CrateDigger runtime and CSV-driven boot script -->
-  <script src="./cratedigger.js"></script>
-  <script src="./main.js"></script>
-</body>
-</html>
+<script src="main.js"></script>
