Fix front cover material orientation

--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
   <script src="cratedigger.js"></script>
 
   <!-- Load the application logic as a classic script -->
-  <script src="main.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
