--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
   <script src="bower_components/threejs/build/three.min.js"></script>
   <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
 
-  <!-- Load the cratedigger library as a classic script; it attaches itself to window.cratedigger -->
-  <script src="cratedigger.js"></script>
-
-  <!-- Load the application logic as a classic script -->
+  <!-- Load the bundled CrateDigger runtime so window.cratedigger is available -->
   <script src="main.js"></script>
+
+  <!-- Load the application controller once the runtime is in place -->
+  <script src="index.js"></script>
 </body>
 </html>
