--- a/index.html
+++ b/index.html
@@ -1,89 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>WRXCRATE</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      background: #222;
-      color: #eee;
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-    #rootContainer {
-      width: 100vw;
-      height: 100vh;
-      position: relative;
-      overflow: hidden;
-    }
-    #canvasContainer {
-      width: 100vw;
-      height: 100vh;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 1;
-    }
-    #loadingContainer {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background: rgba(34,34,34,0.85);
-      color: #fff;
-      font-size: 2em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 10;
-      opacity: 0;
-      transition: opacity 0.3s;
-      pointer-events: none;
-    }
-    #loadingContainer.active {
-      opacity: 1;
-      pointer-events: auto;
-    }
-    #infoContainer {
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 350px;
-      height: 100%;
-      background: rgba(40,40,40,0.96);
-      color: #fff;
-      z-index: 20;
-      padding: 2em 1em;
-      box-shadow: -2px 0 8px rgba(0,0,0,0.3);
-      opacity: 0;
-      transition: opacity 0.3s;
-      pointer-events: none;
-    }
-    #infoContainer.active {
-      opacity: 1;
-      pointer-events: auto;
-    }
-    @media (max-width: 600px) {
-      #infoContainer {
-        width: 100vw;
-        height: 40vh;
-        top: auto;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        box-shadow: 0 -2px 8px rgba(0,0,0,0.3);
-      }
-    }
-  </style>
+  <meta charset="utf-8">
+  <title>cratedigger.js</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="cratedigger.css" />
+  <link rel="stylesheet" href="main.css" />
+  <!-- Link the custom favicon instead of relying on the default favicon.ico request -->
+  <link rel="icon" href="favicon_Version7.ico" type="image/x-icon" />
+  <!-- Use HTTPS to avoid mixed‑content errors on GitHub Pages -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div id="rootContainer">
-    <div id="canvasContainer"></div>
-    <div id="loadingContainer">Loading...</div>
-    <div id="infoContainer"></div>
+  <div id="cratedigger">
+    <div id="cratedigger-canvas"></div>
+    <div id="cratedigger-loading">
+      <div class="info-container">
+        <div class="vertical-center">
+          <span class="loading-label">Loading records...</span>
+        </div>
+      </div>
+    </div>
+    <div id="cratedigger-info">
+      <div class="info-container">
+        <div class="vertical-center">
+          <div id="cratedigger-record-artist"></div>
+          <div id="cratedigger-record-title"></div>
+          <div id="cratedigger-record-cover"></div>
+        </div>
+      </div>
+    </div>
   </div>
-  <script type="module" src="cratedigger.js"></script>
+
+  <div id="bottom-bar" class="noselect">
+    <div id="button-prev" class="bottom-bar-item">PREVIOUS</div>
+    <div id="button-show" class="bottom-bar-item">SHOW</div>
+    <div id="button-next" class="bottom-bar-item">NEXT</div>
+  </div>
+
+  <!-- Existing vendor scripts -->
+  <script src="bower_components/modernizr/modernizr.js"></script>
+  <script src="bower_components/threejs/build/three.min.js"></script>
+  <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
+
+  <!-- Load the cratedigger library as a classic script; it attaches itself to window.cratedigger -->
+  <script src="cratedigger.js"></script>
+
+  <!-- Load the application logic as a classic script -->
+  <script src="main.js"></script>
 </body>
 </html>
